--- a/dev.env
+++ b/dev.env
@@ -1,3 +1,11 @@
+# Environment variables for CRISPR + AI app
+
+# Streamlit settings
+STREAMLIT_SERVER_PORT=8501
+STREAMLIT_SERVER_ADDRESS=0.0.0.0
+
+# Secret key for your app (change this to any random string)
+SECRET_KEY=my_super_secret_key_123
+
+# Debug mode (True/False)
 DEBUG=True
-OPENAI_KEY=sk-demo
-STRIPE_KEY=stripe-demo
